--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<li><a href="07/">【Chapter7】ユーザーアクションの取り扱い【113〜134】</a></li>
 	<li><a href="08/">【Chapter8】HTML要素の操作方法【135〜160】</a></li>
 	<li><a href="09/">【Chapter9】フォーム要素の操作方法【161〜179】</a></li>
-	<li><a href="10/">【Chapter10】【〜】</a></li>
+	<li><a href="10/">【Chapter10】アニメーションの作成【180〜190】</a></li>
 	<li><a href="11/">【Chapter11】【〜】</a></li>
 	<li><a href="12/">【Chapter12】【〜】</a></li>
 	<li><a href="13/">【Chapter13】【〜】</a></li>
