--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<li><a href="08/">【Chapter8】HTML要素の操作方法【135〜160】</a></li>
 	<li><a href="09/">【Chapter9】フォーム要素の操作方法【161〜179】</a></li>
 	<li><a href="10/">【Chapter10】アニメーションの作成【180〜190】</a></li>
-	<li><a href="11/">【Chapter11】【〜】</a></li>
+	<li><a href="11/">【Chapter11】画像・音声・動画の取扱い【191〜203】</a></li>
 	<li><a href="12/">【Chapter12】【〜】</a></li>
 	<li><a href="13/">【Chapter13】【〜】</a></li>
 	<li><a href="14/">【Chapter14】【〜】</a></li>
