--- a/12/index.html
+++ b/12/index.html
@@ -486,8 +486,25 @@ function cloneToImage(data) {
 </section><!-- section -->
 
 <section>
-<h2><b>218</b>タイトル</h2>
-<h4>SAMPLE #<b>タイトル</b></h4>
+<h2><b>218</b>キャンバスで描いたグラフィックをダウンロードする</h2>
+<table>
+	<tr>
+		<th>メソッド</th>
+		<th>意味</th>
+		<th>戻り値</th>
+	</tr>
+	<tr>
+		<td>new Blob(配列, オプション)</td>
+		<td>Blobオブジェクトを作成する</td>
+		<td>Blobオブジェクト</td>
+	</tr>
+</table>
+<ul>
+	<li>a要素を用意することで、ユーザーにcanvasで描いたグラフィックをダウンロードさせることができる</li>
+	<li>画像データはtoDataURL()を使いBase64文字列として取得する</li>
+	<li>バイナリとして扱うためBlobオブジェクトへと変換する</li>
+</ul>
+<h4>SAMPLE #218<b>キャンバスで描いたグラフィックをダウンロードする</b></h4>
 <pre><code>
 </code></pre>
 </section><!-- section -->
