--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 	<li><a href="10/">【Chapter10】アニメーションの作成【180〜190】</a></li>
 	<li><a href="11/">【Chapter11】画像・音声・動画の取扱い【191〜203】</a></li>
 	<li><a href="12/">【Chapter12】SVGやcanvas要素を取り扱う【204〜218】</a></li>
-	<li><a href="13/">【Chapter13】【〜】</a></li>
-	<li><a href="14/">【Chapter14】【〜】</a></li>
-	<li><a href="15/">【Chapter15】【〜】</a></li>
-	<li><a href="16/">【Chapter16】【〜】</a></li>
-	<li><a href="17/">【Chapter17】【〜】</a></li>
-	<li><a href="18/">【Chapter18】【〜】</a></li>
-	<li><a href="19/">【Chapter19】【〜】</a></li>
+	<li><a href="13/">【Chapter13】処理の実行タイミングを制御する【219〜227】</a></li>
+	<li><a href="14/">【Chapter14】さまざまなデータの送受信方法【228〜243】</a></li>
+	<li><a href="15/">【Chapter15】ローカルデータの取り扱い【244〜247】</a></li>
+	<li><a href="16/">【Chapter16】スマートフォンのセンサー【248〜250】</a></li>
+	<li><a href="17/">【Chapter17】プログラムのデバッグ【251〜258】</a></li>
+	<li><a href="18/">【Chapter18】関数やクラスについて詳しく知る【259〜267】</a></li>
+	<li><a href="19/">【Chapter19】JavaScriptをより深く知る【268〜278】</a></li>
 </ol>
 </body>
 </html>
