--- a/12/index.html
+++ b/12/index.html
@@ -505,8 +505,15 @@ function cloneToImage(data) {
 	<li>バイナリとして扱うためBlobオブジェクトへと変換する</li>
 </ul>
 <h4>SAMPLE #218<b>キャンバスで描いたグラフィックをダウンロードする</b></h4>
-<pre><code>
-</code></pre>
+<figure>
+	<canvas id="canvas-original" width="500" height="300"></canvas>
+	<figcaption>元の画像</figcaption>
+</figure>
+<figure>
+	<canvas id="canvas-effected" width="500" height="300"></canvas>
+	<figcaption>変換後の画像</figcaption>
+</figure>
+<p class="btn" id="btn218">変換後の画像をダウンロード</p>
 </section><!-- section -->
 
 
