--- a/18/index.html
+++ b/18/index.html
@@ -60,83 +60,398 @@
 </section><!-- section -->
 
 <section>
-<h2><b>260</b>情報・エラー・警告を出力する</h2>
+<h2><b>260</b>クラスを定義する</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>class クラス名{}</td>
+		<td>クラスを宣言する</td>
+	</tr>
+</table>
 <ul>
-	<li></li>
+	<li>クラスはある機能をひとまとめにしたもの</li>
+	<li>オブジェクト指向プログラミングを実践する</li>
+	<li>クラス名は大文字からキャメルケースで定義するのが通例</li>
 </ul>
-<h4>SAMPLE #260<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<pre><code>class MyClass {}</code></pre>
+<ul>
+	<li>constructor()文を記述すると、その中身が初期化時に実行される</li>
+	<li>constructor()は一つしか記述できない</li>
+</ul>
+<pre><code>class MyClass {
+	constructor() {
+		console.log('クラスが初期化された');
+	}
+}
+</code></pre>
+<ul>
+	<li>クラスの初期化時に初期値を渡すこともできる</li>
+	<li>初期値はconstructor()の引数として受け取れる</li>
+</ul>
+<pre><code>class MyClass {
+	constructor(value1, value2) {
+		console.log(value1);
+		console.log(value2);
+	}
+}
+//初期値の「あか」と「25」が出力
+new MyClass('あか', 25);
+</code></pre>
+<ul>
+	<li>クラスには、そのクラスに属する変数や関数を持つことが可能</li>
+	<li>クラスに属するという意味で「メンバー」と呼ばれる</li>
+</ul>
+<pre><code>class MyClass {
+	constructor() {
+		//メンバー変数
+		this.myField = '山口';
+		//メンバー関数
+		myMethod() {
+			console.log(this.myField);
+		}
+	}
+}
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>261</b>情報・エラー・警告を出力する</h2>
+<h2><b>261</b>クラスを使う（インスタンス化）</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>new クラス名()</td>
+		<td>クラスをインスタンス化する</td>
+	</tr>
+</table>
 <ul>
-	<li></li>
+	<li>class宣言で定義したクラスを使うには、new クラス名()とする（インスタンス化）</li>
+	<li>インスタンス化されたデータは、クラス名の各フィールドやメソッドにアクセスできる</li>
 </ul>
-<h4>SAMPLE #261<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<h4>SAMPLE #261<b>クラスを使う（インスタンス化）</b></h4>
+<pre><code>class MyClass {
+	constructor() {
+		this.classField = 12;
+	}
+	classMethod() {
+		console.log('sec261のメソッドが実行');
+	}
+}
+const myInstance = new MyClass();
+console.log('sec261のフィールド：' + myInstance.classField);
+myInstance.classMethod();
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>262</b>情報・エラー・警告を出力する</h2>
+<h2><b>262</b>クラスで変数を使う</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>this.変数名 = 値</td>
+		<td>メンバー変数を定義する</td>
+	</tr>
+</table>
 <ul>
-	<li></li>
+	<li>クラスに属する変数は「クラスフィールド」「クラス変数」「メンバー変数」という</li>
+	<li>メンバー変数を定義するには、constructor()内にthis.変数名と記述</li>
+	<li>thisはクラス自身を指す</li>
+	<li>letやconstを記述しない</li>
+	<li>メンバー変数には初期値の代入が可能</li>
+	<li>代入しない場合はhaundefinedになる</li>
 </ul>
-<h4>SAMPLE #262<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<pre><code>class MyClass {
+	constructor() {
+		this.myField1 = 100;
+		this.myField2 = '中田';
+	}
+}</code></pre>
+<ul>
+	<li>「インスタンス.メンバー変数名」でインスタンスからメンバー変数にアクセスする</li>
+	<li>オブジェクトのプロパティにアクセスするときと同じ</li>
+</ul>
+<pre><code>const myInstance = new MyClass();
+console.log(myInstance.myField1); //結果:100
+</code></pre>
+<ul>
+	<li>メンバー変数に初期値を代入する場合、constructor()の引数として渡す</li>
+	<li>constructor()も関数なので引数の初期値が指定可能</li>
+</ul>
+<pre><code>class MyClass {
+	constructor(myF1, myF2 = 'りんご') {
+		this.myF1 = myF1;
+		this.myF2 = myF2;
+	}
+}
+const myInstance = new MyClass('中田');
+console.log(myInstance.myF1); //結果:'中田'
+console.log(myInstance.myF2); //結果:'りんご'
+</code></pre>
+<h4>SAMPLE #262<b>API通信結果のJSONデータを格納するクラスの作成</b></h4>
+<div>
+	<p class="btn" onclick="sec262()">データを出力</p>
+</div>
+<pre><code>//クラス
+class ApiResultData {
+	constructor() {
+		this.result;
+		this.errorMessage;
+		this.userName;
+		this.age;
+	}
+}
+//レスポンスデータのパース（ApiResultDataでの変換）の関数
+function parseData(responce) {
+	//インスタンス化
+	const apiResultData = new ApiResultData();
+	apiResultData.result = responce.result;
+	apiResultData.errorMessage = responce.error_message;
+	apiResultData.userName = responce.user_name;
+	apiResultData.age = responce.age;
+	//出力
+	alert(`${apiResultData.userName}は${apiResultData.age}歳`);
+}
+//APIのレスポンスデータ
+const apiResponce = {
+	result: true, //API通信の結果
+	user_name: '山口',
+	age: 24
+};
+//データをパース
+parseData(apiResponce);
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>263</b>情報・エラー・警告を出力する</h2>
+<h2><b>263</b>クラスでメソッドを使う</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>メソッド名() {処理内容}</td>
+		<td>メンバー関数を定義する</td>
+	</tr>
+</table>
 <ul>
-	<li></li>
+	<li>クラスに属する関数は「クラスメソッド」や「メンバー関数」と呼ばれる</li>
+	<li>functionと記述しない</li>
+	<li>メンバー関数はいくつでも定義できる</li>
+	<li>インスタンス.メンバー関数名でアクセス</li>
 </ul>
-<h4>SAMPLE #263<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<pre><code>class MyClass {
+	constructor() {}
+	//myMethodというメンバー関数
+	myMethod() {
+		return 'Hello';
+	}
+}
+const myInstance = new MyClass();
+//Helloが出力
+console.log(myInstance.myMethod());
+</code></pre>
+<ul>
+	<li>メンバー関数内部ではthisはクラス自身を指す</li>
+	<li>「this.フィールド名」でメンバー変数にアクセス</li>
+</ul>
+<pre><code>class MyClass {
+	constructor() {
+		this.myField = 'さかな';
+	}
+	myMethod() {
+		return this.myField;
+	}
+}
+const myInstance = new MyClass();
+//さかなが出力
+console.log(myInstance.myMethod());
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>264</b>情報・エラー・警告を出力する</h2>
+<h2><b>264</b>インスタンスを作らずに呼び出せる静的なメソッドを使う</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>static メソッド名() {処理内容}</td>
+		<td>静的メソッドを定義する</td>
+	</tr>
+</table>
 <ul>
-	<li></li>
+	<li>クラスをインスタンス化せずに呼び出されるメソッドを「静的メソッド」「スタティックメソッド」と呼ぶ</li>
+	<li>static宣言により定義する</li>
+	<li>「クラス名.メソッド名」で呼び出し</li>
 </ul>
-<h4>SAMPLE #264<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<pre><code>class MyClass {
+	static method() {
+		console.log('staticなメソッド');
+	}
+}
+//呼び出し
+MyClass.method();
+</code></pre>
+<ul>
+	<li>使い所は汎用的に使いたいメソッドの定義</li>
+	<li>クラスのプロパティの状態に依存しない関数の定義</li>
+</ul>
+<h4>SAMPLE #264<b>汎用的なスタティックメソッドのサンプル</b></h4>
+<pre><code>class StringUtil {
+	//スタティックメソッド
+	static createFullName(firstName, familyName) {
+		return `${familyName} ${firstName}`;
+	}
+}
+//呼び出し
+const fullName = StringUtil.createFullName('やすたか', 'なかた');
+console.log(fullName);
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>265</b>情報・エラー・警告を出力する</h2>
+<h2><b>265</b>クラスを継承する</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>class クラス名 extends 親クラス名 {}</td>
+		<td>親クラスを継承して新しいクラスを宣言する</td>
+	</tr>
+</table>
 <ul>
-	<li></li>
+	<li>あるクラスのプロパティやメソッドを受け継いで新しいクラスを作成できる</li>
 </ul>
-<h4>SAMPLE #265<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<h4>SAMPLE #265<b>クラスを継承する</b></h4>
+<pre><code>//継承元のクラス（親クラス）
+class MyParent {
+	parentMethod() {
+		console.log('MypaParentクラスのメソッド');
+	}
+}
+//MyParentを継承したクラス（子クラス）
+class MyChild extends MyParent {
+	constructor() {
+		//子クラスのconstructorに必須※
+		super();
+	}
+	childMethod() {
+		console.log('MypaChildクラスのメソッド');
+	}
+}
+//子クラスをインスタンス化
+const myChild = new MyChild();
+//両方実行できる
+myChild.parentMethod();
+myChild.childMethod();
+</code></pre>
+<a href="https://qiita.com/noriaki/items/b354139006d244aac0a0" target="_blank">※constructorのsuper()</a>
+</section><!-- section -->
+
+<section>
+<h2><b>266</b>クラスで値を設定・取得するためのsetter・getterを使う</h2>
+<table>
+	<tr>
+		<th>構文</th>
+		<th>意味</th>
+	</tr>
+	<tr>
+		<td>set プロパティ名(値) {}</td>
+		<td>setterを定義する</td>
+	</tr>
+	<tr>
+		<td>get プロパティ名</td>
+		<td>getterを定義する</td>
+	</tr>
+</table>
+<ul>
+	<li>setter・getterとはクラスのフィールドのような振る舞いをする仕組み</li>
+	<li>setは値をセット</li>
+	<li>setはメソッドのように定義しているが、プロパティのように代入形式で記述する</li>
+	<li>getは値を取得</li>
+</ul>
+<h4>SAMPLE #266<b>「customField」という名前のsetter、getterを定義する</b></h4>
+<pre><code>class MyClass {
+	//「customField」のsetter
+	set customField(value) {
+		this._customField = value;
+	}
+	//「customField」のgetter
+	get customField() {
+		return this._customField;
+	}
+	constructor(value) {
+		this._customField = value;
+	}
+}
+const myInstance = new MyClass();
+//値のセット（setが実行）
+myInstance.customField = 20;
+//値の取得（getが実行）
+console.log(myInstance.customField);
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>266</b>情報・エラー・警告を出力する</h2>
+<h2><b>267</b>thisが参照するものを固定する（アロー関数）</h2>
 <ul>
-	<li></li>
+	<li>JavaScriptにおいてthisが参照するものは実行箇所によって異なる</li>
+	<li>アロー関数を使うと、実行箇所にかかわらず参照先が変わらない</li>
 </ul>
-<h4>SAMPLE #266<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
+<h4>SAMPLE #267<b>クリック回数をカウントするサンプル</b></h4>
+<div>
+	<p class="btn btn267">クリック</p>
+	<p class="text267">0</p>
+</div>
+<h3>NGの例</h3>
+<pre><code>class LikeCounter {
+	constructor() {
+		//クリックした数（メンバー変数）
+		this.clickedCount = 0;
+		const button = document.querySelector('.btn267');
+		const text = document.querySelector('.text267');
+		//イベントリスナー
+		button.addEventListener('click', function() {
+			//カウントが1増える
+			this.clickedCount += 1;
+			//カウント数出力
+			text.textContent = this.clickedCount;
+		});
+	}
+}
+new LikeCounter();
 </code></pre>
-</section><!-- section -->
-
-<section>
-<h2><b>267</b>情報・エラー・警告を出力する</h2>
+<h3>OKの例</h3>
+<pre><code>class LikeCounter {
+	constructor() {
+		this.clickedCount = 0;
+		const button = document.querySelector('.btn267');
+		const text = document.querySelector('.text267');
+		//イベントリスナー（アロー関数に変更）
+		button.addEventListener('click', () => {
+			this.clickedCount += 1;
+			text.textContent = this.clickedCount;
+		});
+	}
+}
+new LikeCounter();
+</code></pre>
 <ul>
-	<li></li>
+	<li>イベントリスナー内でthisが参照するのは「イベントターゲット」なので「メンバー変数」を参照しない</li>
+	<li>アロー関数に変えることでイベントリスナー内でもthisの参照が変わらない</li>
 </ul>
-<h4>SAMPLE #267<b>情報・エラー・警告を出力する</b></h4>
-<pre><code>
-</code></pre>
 </section><!-- section -->
 
 
